correction exercice two adding gap

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   padding: 5px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -18,12 +19,9 @@ ul {
   display: flex;
   /* this removes the dots on the list items*/
   list-style-type: none;
-  padding: 10px;
-  margin: 10px;
-}
-
-li {
-  margin: 3px; 
+  padding: 0;
+  margin: 0;
+  gap: 10px;
 }
 
 a {
